NEON-1495 Datasets may now contain more than one database.  Each database can have more than one table as before.  Databases can be specified in the dataset configuration in the config.json file.  Updated the sample dataset configuration in the sample.config.json file.  Each visualization now has a menu option for the user to select the visualization's database which updates the table and field options appropriately.  Updated the Filter Builder and Filter Table to accomodate filters on different databases.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -110,69 +110,72 @@
         "name": "Earthquakes",
         "datastore": "mongo",
         "hostname": "localhost",
-        "database": "test",
-        "tables": [{
-            "name": "earthquakes",
-            "fields": [{
-                "columnName": "_id",
-                "prettyName": "Database ID"
-            }, {
-                "columnName": "time",
-                "prettyName": "Time"
-            }, {
-                "columnName": "latitude",
-                "prettyName": "Latitude"
-            }, {
-                "columnName": "longitude",
-                "prettyName": "Longitude"
-            }, {
-                "columnName": "depth",
-                "prettyName": "Depth"
-            }, {
-                "columnName": "mag",
-                "prettyName": "Magnitude"
-            }, {
-                "columnName": "magType",
-                "prettyName": "Magnitude Type"
-            }, {
-                "columnName": "nst",
-                "prettyName": "NST"
-            }, {
-                "columnName": "gap",
-                "prettyName": "Gap"
-            }, {
-                "columnName": "dmin",
-                "prettyName": "DMIN"
-            }, {
-                "columnName": "rms",
-                "prettyName": "RMS"
-            }, {
-                "columnName": "net",
-                "prettyName": "Net"
-            }, {
-                "columnName": "id",
-                "prettyName": "ID"
-            }, {
-                "columnName": "updated",
-                "prettyName": "Updated"
-            }, {
-                "columnName": "place",
-                "prettyName": "Place"
-            }, {
-                "columnName": "type",
-                "prettyName": "Type"
-            }],
-            "mappings": {
-                "date": "time",
-                "latitude": "latitude",
-                "longitude": "longitude",
-                "line_category": "type",
-                "bar_x_axis": "net",
-                "y_axis": "mag",
-                "color_by": "magType",
-                "size_by": "mag",
-                "sort_by": "time"
-            }
+        "databases": [{
+            "name": "test",
+            "tables": [{
+                "name": "earthquakes",
+                "fields": [{
+                    "columnName": "_id",
+                    "prettyName": "Database ID"
+                }, {
+                    "columnName": "time",
+                    "prettyName": "Time"
+                }, {
+                    "columnName": "latitude",
+                    "prettyName": "Latitude"
+                }, {
+                    "columnName": "longitude",
+                    "prettyName": "Longitude"
+                }, {
+                    "columnName": "depth",
+                    "prettyName": "Depth"
+                }, {
+                    "columnName": "mag",
+                    "prettyName": "Magnitude"
+                }, {
+                    "columnName": "magType",
+                    "prettyName": "Magnitude Type"
+                }, {
+                    "columnName": "nst",
+                    "prettyName": "NST"
+                }, {
+                    "columnName": "gap",
+                    "prettyName": "Gap"
+                }, {
+                    "columnName": "dmin",
+                    "prettyName": "DMIN"
+                }, {
+                    "columnName": "rms",
+                    "prettyName": "RMS"
+                }, {
+                    "columnName": "net",
+                    "prettyName": "Net"
+                }, {
+                    "columnName": "id",
+                    "prettyName": "ID"
+                }, {
+                    "columnName": "updated",
+                    "prettyName": "Updated"
+                }, {
+                    "columnName": "place",
+                    "prettyName": "Place"
+                }, {
+                    "columnName": "type",
+                    "prettyName": "Type"
+                }],
+                "mappings": {
+                    "date": "time",
+                    "latitude": "latitude",
+                    "longitude": "longitude",
+                    "line_category": "type",
+                    "bar_x_axis": "net",
+                    "y_axis": "mag",
+                    "color_by": "magType",
+                    "size_by": "mag",
+                    "sort_by": "time",
+                    "count_by": "net"
+                }
+            }]
         }]
     }],
 
