Added gridster margin dashboard configuration option.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -18,9 +18,11 @@
 
     "dashboard": {
         "gridsterColumns": 6,
+        "gridsterMargins": 10,
         "hideNavbarItems": false,
         "hideAdvancedOptions": false,
-        "hideErrorNotifications": false
+        "hideErrorNotifications": false,
+        "hideHeaders": false
     },
 
     "opencpu": {
