NEON-1522 Visualizations now use pretty names for databases and tables from the config.json file if available.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -114,8 +114,10 @@
         "hostname": "localhost",
         "databases": [{
             "name": "test",
+            "prettyName": "Test",
             "tables": [{
                 "name": "earthquakes",
+                "prettyName": "Earthquakes",
                 "fields": [{
                     "columnName": "_id",
                     "prettyName": "Database ID"
