Adding a simple config element for the initial map bounds of a dataset.  If no bounds are specified, the map will display the entire map extent.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -181,6 +181,14 @@
                 }
             }]
         }],
+        "mapConfig": {
+            "bounds" : {
+                "left": -180,
+                "bottom": -90,
+                "right": 180,
+                "top": 90
+            }
+        },
         "mapLayers": [{
             "database": "test",
             "table": "earthquakes",
