Upgrading angular to 1.4.0

--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,12 @@
     "license": "Apache v2",
     "private": true,
     "dependencies": {
-        "angular": "1.2.26",
-        "angular-gridster": "0.11.0",
-        "angular-loader": "1.2.26",
-        "angular-mocks": "1.2.26",
-        "angular-route": "1.2.26",
+        "angular": "1.4.0",
+        "angular-gantt": "1.2.6",
+        "angular-gridster": "0.13.4",
+        "angular-loader": "1.4.0",
+        "angular-mocks": "1.4.0",
+        "angular-route": "1.4.0",
         "bootstrap": "3.2.0",
         "d3": "3.0.8",
         "html5shiv": "3.7.2",
