Updating the version of heatmapjs used by the map visualization and pulling the old openlayer-heatmap layer from version 1 of heatmapjs into the vendor folder.  This has been updated to work with the heatmapjs 2.0 API.  Only a basic migration was done.  Further clean-up or optimization can be done later.

--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
         "mergesort": "https://github.com/justinforce/merge-sort/archive/1.0.zip",
         "opencpu": "https://github.com/NextCenturyCorporation/opencpu.js.git",
         "openlayers": "https://github.com/openlayers/openlayers/releases/download/release-2.13.1/OpenLayers-2.13.1.zip",
-        "openlayers-heatmap": "https://github.com/pa7/heatmap.js.git#v1.0",
+        "heatmapjs": "https://github.com/pa7/heatmap.js.git#v2.0",
         "remarkable-bootstrap-notify": "3.0.0",
         "respond": "1.4.2",
         "slickgrid": "2.1.0",
