NEON-1574 Make close button configurable

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -22,7 +22,8 @@
         "hideNavbarItems": false,
         "hideAdvancedOptions": false,
         "hideErrorNotifications": false,
-        "hideHeaders": false
+        "hideHeaders": false,
+        "hideCloseButton": false
     },
 
     "opencpu": {
