Use config.json to select which opencpu timeseries analysis will be used

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -30,6 +30,9 @@
         "enableOpenCpu": false,
         "enableLogging": false,
         "useAlerts": false,
+        "enableAnomalyDetection": true,
+        "enableStl2": false,
+        "enableMmpp": false,
         "url": "http://neon-opencpu/ocpu/library/NeonAngularDemo/R"
     },
 
