--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "private": true,
     "dependencies": {
         "angular": "1.2.26",
+        "angular-bootstrap-datetimepicker": "0.3.8",
         "angular-gridster": "0.11.0",
         "angular-loader": "1.2.26",
         "angular-mocks": "1.2.26",
@@ -21,6 +22,7 @@
         "jquery.tagcloud": "https://github.com/addywaddy/jquery.tagcloud.js.git",
         "jquery.linky": "0.1.8",
         "mergesort": "https://github.com/justinforce/merge-sort/archive/1.0.zip",
+        "moment": "2.10.3",
         "opencpu": "https://github.com/NextCenturyCorporation/opencpu.js.git",
         "openlayers": "https://github.com/openlayers/openlayers/releases/download/release-2.13.1/OpenLayers-2.13.1.zip",
         "heatmapjs": "https://github.com/pa7/heatmap.js.git#v2.0",
