NEON-1606 Added help button to navbar containing links for the user guide and video which are defined in the configuration file.  The user guide opens in a new tab and the video opens in a popup.  Also added a configuration option to show and autoplay the video popup when the dashboard first loads.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -23,7 +23,13 @@
         "hideAdvancedOptions": false,
         "hideErrorNotifications": false,
         "hideHeaders": false,
-        "hideCloseButton": false
+        "hideCloseButton": false,
+        "showVideoOnLoad": false
+    },
+
+    "help": {
+        "guide": "",
+        "video": ""
     },
 
     "opencpu": {
