Adding example of timeline overrides to sample config

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -277,7 +277,9 @@
             "bindings": {
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
-                "bind-date-field": "'date'"
+                "bind-date-field": "'date'",
+                "override-start-date": "'1/1/2013'",
+                "override-end-date": "1388534399000"
             }
         }, {
             "sizeX": 4,
