Adding filter status tray config to sample config

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -21,6 +21,7 @@
         "gridsterMargins": 10,
         "hideNavbarItems": false,
         "hideAdvancedOptions": false,
+        "showFilterStatusTray": false,
         "hideErrorNotifications": false,
         "hideHeaders": false,
         "hideCloseButton": false,
