Created a sample visualization directive.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -17,7 +17,7 @@
     },
 
     "dashboard": {
-        "gridsterColumns": 6,
+        "gridsterColumns": 24,
         "gridsterMargins": 10,
         "hideNavbarItems": false,
         "hideAdvancedOptions": false,
@@ -50,73 +50,80 @@
 
     "visualizations": [{
         "name": "Filter Builder",
-        "sizeX": 4,
-        "minSizeX": 3,
-        "sizeY": 2,
-        "minSizeY": 1,
+        "sizeX": 12,
+        "minSizeX": 12,
+        "sizeY": 4,
+        "minSizeY": 4,
         "type": "filter-builder",
         "icon": "img/visualizations/CreateFilter64.png"
     }, {
         "name": "Data Table",
         "sizeX": 6,
-        "sizeY": 2,
+        "sizeY": 4,
         "type": "query-results-table",
         "icon": "img/visualizations/ViewData64.png"
     }, {
         "name": "Timeline",
-        "sizeX": 6,
-        "sizeY": 1,
-        "minSizeY": 1,
+        "sizeX": 12,
+        "minSizeX": 12,
+        "sizeY": 4,
+        "minSizeY": 4,
         "type": "timeline-selector",
         "icon": "img/visualizations/Timeline64.png"
     }, {
         "name": "Map",
-        "sizeX": 4,
-        "sizeY": 2,
+        "sizeX": 12,
+        "sizeY": 6,
         "type": "map",
         "icon": "img/visualizations/Map64.png"
     }, {
         "name": "Ops Clock",
-        "sizeX": 2,
-        "sizeY": 2,
+        "sizeX": 6,
+        "sizeY": 4,
         "type": "circular-heat-form",
         "icon": "img/visualizations/OpsClock64.png"
     }, {
         "name": "Line Chart",
-        "sizeX": 2,
-        "sizeY": 2,
+        "sizeX": 6,
+        "sizeY": 4,
         "type": "linechart",
         "icon": "img/visualizations/LineChart64.png"
     }, {
         "name": "Bar Chart",
-        "sizeX": 2,
-        "sizeY": 2,
+        "sizeX": 6,
+        "sizeY": 4,
         "type": "barchart",
         "icon": "img/visualizations/BarChart64.png"
     }, {
         "name": "Sunburst Chart",
-        "sizeX": 2,
-        "sizeY": 2,
+        "sizeX": 6,
+        "sizeY": 4,
         "type": "sunburst",
         "icon": "img/visualizations/Sunburst64.png"
     }, {
         "name": "Text Cloud",
-        "sizeX": 2,
-        "sizeY": 2,
+        "sizeX": 6,
+        "sizeY": 4,
         "type": "tag-cloud",
         "icon": "img/visualizations/TagCloud64.png"
     }, {
         "name": "Aggregation Table",
-        "sizeX": 2,
-        "sizeY": 2,
+        "sizeX": 6,
+        "sizeY": 4,
         "type": "count-by",
         "icon": "img/visualizations/Count64.png"
     }, {
         "name": "Graph",
-        "sizeX": 4,
-        "sizeY": 2,
+        "sizeX": 12,
+        "sizeY": 6,
         "type": "directed-graph",
         "icon": "img/visualizations/Graph64.png"
+    }, {
+        "name": "Sample",
+        "sizeX": 6,
+        "sizeY": 4,
+        "type": "sample",
+        "icon": "img/Neon_60x34.png"
     }],
 
     "datasets": [{
@@ -239,35 +246,44 @@
 
     "layouts": {
         "default": [{
-            "sizeX": 6,
-            "sizeY": 1,
-            "minSizeY": 1,
+            "sizeX": 18,
+            "minSizeX": 12,
+            "sizeY": 4,
+            "minSizeY": 4,
             "type": "timeline-selector"
         }, {
-            "sizeX": 4,
-            "sizeY": 2,
+            "sizeX": 18,
+            "sizeY": 4,
             "type": "map"
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 18,
+            "sizeY": 4,
+            "type": "query-results-table"
+        }, {
+            "sizeX": 18,
+            "sizeY": 4,
+            "type": "filter-builder"
+        }, {
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "circular-heat-form"
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "linechart"
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "barchart"
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "count-by"
         }],
 
         "example-with-bindings": [{
-            "sizeX": 6,
-            "sizeY": 1,
+            "sizeX": 12,
+            "sizeY": 4,
             "type": "timeline-selector",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -277,8 +293,8 @@
                 "override-end-date": "1388534399000"
             }
         }, {
-            "sizeX": 4,
-            "sizeY": 2,
+            "sizeX": 12,
+            "sizeY": 4,
             "type": "map",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -289,8 +305,8 @@
                 "bind-size-field": "'type'"
             }
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "circular-heat-form",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -298,8 +314,8 @@
                 "bind-date-field": "'date'"
             }
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "linechart",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -310,8 +326,8 @@
                 "bind-aggregation-field": "'count'"
             }
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "barchart",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -321,8 +337,8 @@
                 "bind-aggregation-field": "'count'"
             }
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "count-by",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -330,8 +346,8 @@
                 "bind-count-field": "'type'"
             }
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "tag-cloud",
             "bindings": {
                 "bind-database": "'myDatabase'",
@@ -339,16 +355,16 @@
                 "bind-tag-field": "'hashtags'"
             }
         }, {
-            "sizeX": 2,
-            "sizeY": 2,
+            "sizeX": 6,
+            "sizeY": 4,
             "type": "sunburst",
             "bindings": {
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'"
             }
         }, {
-            "sizeX": 6,
-            "sizeY": 2,
+            "sizeX": 12,
+            "sizeY": 4,
             "type": "query-results-table",
             "bindings": {
                 "bind-database": "'myDatabase'",
