--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "grunt-contrib-jshint": "0.11.2",
         "grunt-contrib-less": "1.0.0",
         "grunt-contrib-yuidoc": "0.7.0",
+        "grunt-git-describe": "2.3.2",
         "grunt-jscs": "1.8.0",
         "grunt-karma": "0.10.1",
         "grunt-war": "0.4.5",
