NEON-1720 Add configuration to show/hide export

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -25,7 +25,9 @@
         "hideErrorNotifications": false,
         "hideHeaders": false,
         "hideCloseButton": false,
-        "showVideoOnLoad": false
+        "showVideoOnLoad": false,
+        "showImport": false,
+        "showExport": false
     },
 
     "help": {
