Change config to default to show export

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -27,7 +27,7 @@
         "hideCloseButton": false,
         "showVideoOnLoad": false,
         "showImport": false,
-        "showExport": false
+        "showExport": true
     },
 
     "help": {
