NEON-1740 Can now specify colors for points in the map in the config.json file based on specific values in the color field.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -236,6 +236,9 @@
             "longitudeMapping": "longitude",
             "limit": 5000,
             "colorBy": "magType",
+            "colors": {
+                "typeA": "#123456"
+            },
             "sizeBy": "mag"
         }],
         "linkyConfig": {
