NEON-1741 Changed the default title for most visualizations to include their most important field names.  Added data bindings for all visualizations to override the title through the configuration file.  Added responsive resizing behavior to handle long titles appropriately.

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -291,6 +291,7 @@
             "sizeY": 4,
             "type": "timeline-selector",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-date-field": "'date'",
@@ -302,6 +303,7 @@
             "sizeY": 4,
             "type": "map",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-latitude-field": "'latitude'",
@@ -314,6 +316,7 @@
             "sizeY": 4,
             "type": "circular-heat-form",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-date-field": "'date'"
@@ -323,6 +326,7 @@
             "sizeY": 4,
             "type": "linechart",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-date-field": "'date'",
@@ -335,6 +339,7 @@
             "sizeY": 4,
             "type": "barchart",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-x-axis-field": "'type'",
@@ -346,6 +351,7 @@
             "sizeY": 4,
             "type": "count-by",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-count-field": "'type'"
@@ -355,6 +361,7 @@
             "sizeY": 4,
             "type": "tag-cloud",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'",
                 "bind-tag-field": "'hashtags'"
@@ -364,6 +371,7 @@
             "sizeY": 4,
             "type": "sunburst",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'"
             }
@@ -372,6 +380,7 @@
             "sizeY": 4,
             "type": "query-results-table",
             "bindings": {
+                "bind-title": "'myTitle'",
                 "bind-database": "'myDatabase'",
                 "bind-table": "'myTable'"
             }
