Fix legend on directed graph going below visualization and jshint errors

--- a/.jshintrc
+++ b/.jshintrc
@@ -101,8 +101,10 @@
         "expect": false,
         "it": false,
         "inject": false,
+        "mediators": true,
         "module": true,
         "neon": true,
+        "neonColors": true,
         "ocpu": true,
         "OpenLayers": true,
         "OWF": true,
