NEON-1323 Add to sample config and minor styling fixes

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -27,7 +27,11 @@
         "hideCloseButton": false,
         "showVideoOnLoad": false,
         "showImport": false,
-        "showExport": true
+        "showExport": true,
+        "translationKeys": {
+            "google": "API_KEY"
+        }
+    },
     },
 
     "help": {
