--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "grunt-contrib-clean": "0.6.0",
         "grunt-contrib-jshint": "0.11.2",
         "grunt-contrib-less": "1.0.0",
+        "grunt-contrib-watch": "0.6.1",
         "grunt-contrib-yuidoc": "0.7.0",
         "grunt-git-describe": "2.3.2",
         "grunt-jscs": "1.8.0",
