NEON-1632 Add configuration for map base layer with https

--- a/app/config/sample.config.json
+++ b/app/config/sample.config.json
@@ -259,7 +259,10 @@
                     }
                 }
             },
-            "mapBaseLayer": "dark"
+            "mapBaseLayer": {
+                "color": "dark",
+                "protocol": "https"
+            }
         }
     }],
 
