--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
         "javascript-detect-element-resize": "sdecima/javascript-detect-element-resize#0.5.3",
         "jquery.tagcloud": "https://github.com/addywaddy/jquery.tagcloud.js.git",
         "jquery.linky": "0.1.8",
+        "js-yaml": "3.4.3",
         "mergesort": "https://github.com/justinforce/merge-sort/archive/1.0.zip",
         "mustache": "2.1.3",
         "ngDraggable": "0.1.8",
